--- a/css/垂直居中.html
+++ b/css/垂直居中.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
     <h1>1、line-height</h1>
     <div class="container1">
-        this is  first method 
+        this is first method
     </div>
     <style>
-        .container1{width:200px;height: 200px;line-height: 200px;border:1px solid black; text-align: center;}
+        .container1 {
+            width: 200px;
+            height: 200px;
+            line-height: 200px;
+            border: 1px solid black;
+            text-align: center;
+        }
     </style>
-    <h2>2、float</h2><span>这个就是在上边放一个100px的空白空间，然后设置内容的大小是100px  没什么实用价值</span>
+    <h2>2、float</h2>
+    <span>这个就是在上边放一个100px的空白空间，然后设置内容的大小是100px 没什么实用价值</span>
     <div class="float-box">
         <div class="floater"></div>
         <div class="float-content">
@@ -22,154 +31,162 @@
         </div>
     </div>
     <style>
-        .float-box{  
-    width: 300px;  
-    height: 200px;  
-    background-color: #99CCCC;  
-}  
-.floater{  
-    float: left;  
-    height: 50%;  
-    width: 100%;  
-}  
-.float-content{  
-    clear: both;  
-    height: 100px;  
-    text-align: center;  
-}  
+        .float-box {
+            width: 300px;
+            height: 200px;
+            background-color: #99CCCC;
+        }
+
+        .floater {
+            float: left;
+            height: 50%;
+            width: 100%;
+        }
+
+        .float-content {
+            clear: both;
+            height: 100px;
+            text-align: center;
+        }
     </style>
-    <h2>3、absolute</h2><span>不适用于多行文本显示的时候</span>
+    <h2>3、absolute</h2>
+    <span>不适用于多行文本显示的时候</span>
     <div class="absulote-box">
         <div class="absulote-content">
             absolute绝对定位 垂直居中
         </div>
     </div>
     <style>
-        .absulote-box{  
-    background-color: #FF9999;  
-    width: 300px;  
-    height: 200px;  
-    position: relative;  
-}  
-.absulote-content{  
-    position: absolute;  
-    top: 50%;  
-    text-align: center;  
-    width: 100%;  
-}  
+        .absulote-box {
+            background-color: #FF9999;
+            width: 300px;
+            height: 200px;
+            position: relative;
+        }
+
+        .absulote-content {
+            position: absolute;
+            top: 50%;
+            text-align: center;
+            width: 100%;
+        }
     </style>
 
 
-<h1>4、absolute +margin:auto</h1><span>这个比较常见，但也是子如果比较多的话，会自动向下排列
-</span>
-<div class="margin-box">
-    <div class="margin-content">
-        absolute+margin垂直居中
+    <h1>4、absolute +margin:auto</h1>
+    <span>这个比较常见，但也是子如果比较多的话，会自动向下排列
+    </span>
+    <div class="margin-box">
+        <div class="margin-content">
+            absolute+margin垂直居中
+        </div>
     </div>
-</div>
 
 
-<style>
-    .margin-box{
-	background-color: #CC9966;
-	width: 300px;
-	height: 200px;
-	position: relative;
-}
-.margin-content{
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	width: 184px;
-	height: 16px;
-	margin: auto;
-}
-</style>
+    <style>
+        .margin-box {
+            background-color: #CC9966;
+            width: 300px;
+            height: 200px;
+            position: relative;
+        }
 
-<h1>
-    5、absolute css3  
-</h1><span >据说这个是兼容多行字体的,但是需要css3的新特性，需要考虑一下ie9</span>
-<div class="absuloteCss3-box">
-<div class="absuloteCss3-content">
-    absulote+Css3垂直居中
-</div>
-</div>
+        .margin-content {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            width: 184px;
+            height: 16px;
+            margin: auto;
+        }
+    </style>
 
-<style>
-    .absuloteCss3-box{
-	position: relative;
-	width: 300px;
-	height: 200px;
-	background-color: #99CC99;
-}
-.absuloteCss3-content{
-	position: absolute;
-	left: 50%;
-	top:50%;
-	width: 172px;
-	transform: translate(-50%, -50%);
-}.absuloteCss3-box{
-	position: relative;
-	width: 300px;
-	height: 200px;
-	background-color: #99CC99;
-}
-.absuloteCss3-content{
-	position: absolute;
-	left: 50%;
-	top:50%;
-	width: 172px;
-	transform: translate(-50%, -50%);
-}
-</style>
+    <h1>
+        5、absolute css3
+    </h1>
+    <span>据说这个是兼容多行字体的,但是需要css3的新特性，需要考虑一下ie9</span>
+    <div class="absuloteCss3-box">
+        <div class="absuloteCss3-content">
+            absulote+Css3垂直居中
+        </div>
+    </div>
 
-<h1>flex布局</h1>
-<div id="box">
-     今天先的霾严重的吓人，
-</div>
-<style>
-    #box {
-    width: 300px;
-    height: 300px;
-    display: flex;
-    align-items: center;
-    background: #ddd;
-    padding: 100px 0;
-}
-</style>
+    <style>
+        .absuloteCss3-box {
+            position: relative;
+            width: 300px;
+            height: 200px;
+            background-color: #99CC99;
+        }
 
+        .absuloteCss3-content {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            width: 172px;
+            transform: translate(-50%, -50%);
+        }
 
-<h1>
-    弹性布局的操作</h1>
-<div class="box01">
-    <div class="child01">tzheli shi tanxingbuju </div>
-</div>
-flex-direction 的属性有四个，分别是：row 主轴为水平方向 row-reverse column    column-reverse 主轴喂垂直方向，起点在下
+        .absuloteCss3-box {
+            position: relative;
+            width: 300px;
+            height: 200px;
+            background-color: #99CC99;
+        }
+
+        .absuloteCss3-content {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            width: 172px;
+            transform: translate(-50%, -50%);
+        }
+    </style>
+
+    <h1>flex布局</h1>
+    <div id="box">
+        今天先的霾严重的吓人，
+    </div>
+    <style>
+        #box {
+            width: 300px;
+            height: 300px;
+            display: flex;
+            align-items: center;
+            background: #ddd;
+            padding: 100px 0;
+        }
+    </style>
 
 
-justify-content属性定义了项目在主轴上的对齐方式，可能的取值有五个，分别如下（不过具体的对齐方式与主轴的方向有关，以下的值都是假设主轴为从左到右的）： 　　flex-start（该值是默认值）：左对齐； 　　flex-end：右对齐；
-　　center：居中对齐； 　　space-between：两端对齐，各个项目之间的间隔均相等； 　　space-around：各个项目两侧的间隔相等。
+    <h1>
+        弹性布局的操作</h1>
+    <div class="box01">
+        <div class="child01">tzheli shi tanxingbuju </div>
+    </div>
 
-<style>
-    .box {
-    width: 300px;
-    height: 300px;
-    background: #ddd;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-.child {
-    width: 300px;
-    height: 100px;
-    background: #08BC67;
-    line-height: 100px;
-}
-</style>
+    flex-direction 的属性有四个，分别是：row 主轴为水平方向 row-reverse column column-reverse 主轴喂垂直方向，起点在下 justify-content属性定义了项目在主轴上的对齐方式，可能的取值有五个，分别如下（不过具体的对齐方式与主轴的方向有关，以下的值都是假设主轴为从左到右的）：
+    　　flex-start（该值是默认值）：左对齐； 　　flex-end：右对齐； 　　center：居中对齐； 　　space-between：两端对齐，各个项目之间的间隔均相等； 　　space-around：各个项目两侧的间隔相等。
 
+    <style>
+        .box01 {
+            width: 300px;
+            height: 300px;
+            background: #ddd;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
 
-
+        .child01 {
+            width: 300px;
+            height: 100px;
+            background: #08BC67;
+            line-height: 100px;
+        }
+    </style>
 </body>
+
 </html>
